Added models abd examples
