# src/app/controllers/track.ts
@@ -5,30 +5,7 @@ import { Table } from '../../lib/table';
 import { Gas } from '../../lib/gas';
 import { Roads } from '../../lib/roads'
 import trackSerializer from '../serializers/track';
-const roadTypeChecker = (roadType) => {
-  switch (roadType) {
-    case 'city':
-      return Roads.City;
-    case 'motorway':
-      return Roads.Motorway;
-    case 'highway': 
-      return Roads.Highway;
-    default:
-        throw new Error('Wrong road type has been added!');
-  }
-}
-const gasTypeChecker = (gasType) => {
-  switch (gasType) {
-    case 'diesel':
-      return Gas.Diesel;
-    case 'og85plus':
-      return Gas.OG85P;
-    case 'og90plus': 
-      return Gas.OG90P;
-    default:
-      throw new Error('Wrong gas type has been added!');
-  }
-}
+
 export default {
   authorization: (req: Request, res: Response, next: NextFunction) => {
     next();
@@ -58,10 +35,10 @@ export default {
   create: async (req: Request, res: Response) => {
     try {
       const track: Partial<Track> = {
-        tripState: req.query.tripState,
-        roadType: roadTypeChecker(req.query.roadType),
-        gasType: gasTypeChecker(req.query.gasType),
-        amountFilled: req.query.amountFilled
+        tripState: req.body.tripState,
+        roadType: req.body.roadType,
+        gasType: req.body.gasType,
+        amountFilled: req.body.amountFilled
       };
       await database(Table.track).insert(track);
       res.sendStatus(200);
@@ -77,7 +54,7 @@ export default {
       if (track) {
         const updatedTrack: Partial<Track> = {
             tripState: req.body.tripState,
-            roadType: roadTypeChecker(req.query.roadType),
+            roadType: req.body.roadType,
             gasType: req.body.gasType,
             amountFilled: req.body.amountFilled
           };
